<resources>
    <string name="app_name">Scoutv1</string>
    <string name="signUp_hint1">Type your Email</string>
    <string name="signUp_hint2">Type Your Password</string>
    <string name="signUp_hint3">Retype Your Password</string>
    <string name="signUp_button">Sign Up</string>
    <string name="signUp_last">Already Registered, Sign In!</string>

    <string name="signIn_hint1">Type your Email</string>
    <string name="signIn_hint2">Type Your Password</string>
    <string name="signIn_button">Sign In</string>
    <string name="signIn_last">Not Registered Yet, Sign Up!</string>

    <string name="main_search">Search</string>
    <string name="main_search_text">Search</string>
    <string name="otherButton">OTHER</string>

    <string name="itemNameText">NAME</string>
    <string name="itemDescriptionText">Add Description...</string>
    <string name="itemPhoneNumberText">Add phone number</string>
    <string name="itemUploadButton">Add</string>
    <string name="addIteButton">Add Item</string>
    <string name="myAccountButton">My Account</string>
    <string name="Price">Price</string>
    <string name="currency">€</string>

    <string name="callButton">Call</string>
    <string name="logOutBtn">Log out</string>
    <string name="resetPassBtn">Reset password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>