<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_blur_blank"
    tools:context=".addItemActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="92dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/itemUploadButton"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passET"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="174dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="82dp"
        android:onClick="pickPhoto"
        app:layout_constraintBottom_toTopOf="@+id/itemCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <EditText
        android:id="@+id/ItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="82dp"
        android:ems="10"
        android:hint="@string/itemNameText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ItemDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemCategory" />

    <EditText
        android:id="@+id/ItemDescription"
        android:layout_width="207dp"
        android:layout_height="94dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="82dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/itemDescriptionText"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/ItemPhoneNUmber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItemName" />

    <EditText
        android:id="@+id/ItemPhoneNUmber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="82dp"
        android:ems="10"
        android:hint="@string/itemPhoneNumberText"
        android:inputType="textPersonName"
        android:phoneNumber="false"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItemDescription" />

    <Spinner
        android:id="@+id/itemCategory"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toTopOf="@+id/ItemName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>