<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gray_v1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/main_search_text"
        android:inputType="textPersonName"
        android:password="false"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#0000FF"
        android:backgroundTint="#00FFFFFF"
        app:icon="@drawable/ic_baseline_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button1"
        android:layout_width="167dp"
        android:layout_height="117dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_directions_car_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="80dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="167dp"
        android:layout_height="117dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_phone_iphone_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="80dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="167dp"
        android:layout_height="117dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_computer_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="80dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="167dp"
        android:layout_height="117dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_music_note_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="80dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="167dp"
        android:layout_height="117dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_pets_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="80dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="373dp"
        android:layout_height="66dp"
        android:text="@string/otherButton"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="80dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="167dp"
        android:layout_height="117dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_apartment_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="80dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <Button
        android:id="@+id/button8"
        android:layout_width="164dp"
        android:layout_height="70dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="8dp"
        android:text="@string/addIteButton"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button11"
        android:layout_width="164dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="28dp"
        android:text="@string/myAccountButton"
        app:icon="@drawable/ic_baseline_person_24"
        app:iconSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

</androidx.constraintlayout.widget.ConstraintLayout>